--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
 	"name": "gendix",
 	"version": "0.1.0",
+	"type": "module",
 	"private": true,
 	"engines": {
 		"node": ">=22.0.0"
 	},
 	"scripts": {
 		"start": "node dist/index.js",
-		"dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+		"dev": "tsx watch src/index.ts",
 		"build": "tsc",
 		"test": "jest",
 		"test:watch": "jest --watch",
@@ -18,8 +19,15 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
-		"hono": "^4.1.1",
 		"@hono/node-server": "^1.4.1",
+		"@opentelemetry/api": "^1.9.0",
+		"@opentelemetry/auto-instrumentations-node": "^0.58.0",
+		"@opentelemetry/exporter-trace-otlp-http": "^0.200.0",
+		"@opentelemetry/resources": "^2.0.0",
+		"@opentelemetry/sdk-node": "^0.200.0",
+		"@opentelemetry/semantic-conventions": "^1.32.0",
+		"dotenv": "^16.5.0",
+		"hono": "^4.1.1",
 		"kysely": "^0.27.3",
 		"pg": "^8.11.3",
 		"zod": "^3.22.4"
@@ -37,7 +45,7 @@
 		"jest": "^29.7.0",
 		"prettier": "^3.2.5",
 		"ts-jest": "^29.1.2",
-		"ts-node-dev": "^2.0.0",
+		"tsx": "^4.19.3",
 		"typescript": "^5.3.3"
 	}
 }
