--- a/.eslintrc
+++ b/.eslintrc
@@ -12,5 +12,6 @@
 		"no-console": "warn",
 		"@typescript-eslint/explicit-function-return-type": "warn",
 		"@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
-	}
+	},
+	"ignorePatterns": ["dist/**/*"]
 }
