--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"start": "node dist/index.js",
 		"dev": "tsx watch src/index.ts",
 		"build": "tsc",
+    "check": "npm run format:check && npm run lint && npm run test",
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"lint": "eslint . --ext .ts",
@@ -20,6 +21,7 @@
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.4.1",
+		"@hono/zod-validator": "^0.4.3",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/auto-instrumentations-node": "^0.58.0",
 		"@opentelemetry/exporter-trace-otlp-http": "^0.200.0",
