--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
 		"start": "node dist/index.js",
 		"dev": "tsx watch src/index.ts",
 		"build": "tsc",
-    "check": "npm run format:check && npm run lint && npm run test",
+    "check": "npm run format && npm run lint && npm run test",
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"lint": "eslint . --ext .ts",
 		"lint:fix": "eslint . --ext .ts --fix",
-		"format": "prettier --write \"src/**/*.ts\"",
-		"format:check": "prettier --check \"src/**/*.ts\"",
+		"format": "prettier --check \"src/**/*.ts\"",
+		"format:fix": "prettier --write \"src/**/*.ts\"",
 		"prepare": "husky"
 	},
 	"dependencies": {
